# green

./: .gitmodules  CMakeLists.txt
main/: global_manager.hpp  indices.cpp  input_manager.cpp  input_manager.hpp  main.cpp  resource_manager.cpp  resource_manager.hpp  vertices.cpp
res/: Info.plist  app.icns
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/green/core/: math_base.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/renderer/green/renderer/: texture.hpp
src/third/: CMakeLists.txt
src/third/stb/: stb.cpp
src/third/stb/include/stb/: stb.hpp
src/utils/: CMakeLists.txt
src/utils/green/utils/: log.cpp  log.hpp  noncopyable.hpp
src/utils/green/utils/glad/include/glad/: glad.h
src/utils/green/utils/glad/src/: glad.c
src/utils/green/utils/glfw/: glfw_window.cpp  glfw_window.hpp
src/utils/green/utils/opengl/: opengl.cpp  opengl.hpp  opengl_buffer.hpp  opengl_buffer_object.cpp  opengl_buffer_object.hpp  opengl_frame_surface_handler.cpp  opengl_frame_surface_handler.hpp  opengl_program.cpp  opengl_program.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_texture_object.cpp  opengl_texture_object.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp  opengl_vertex_array_object.cpp  opengl_vertex_array_object.hpp
